crates/toml_edit/tests/snapshots/invalid/ext/table/ml_literal.stderr
TOML parse error at line 1, column 2
  |
1 | ['''table''']
  |  ^^^^^^^^^^^
keys cannot be multi-line literal strings, expected basic string, literal string
